fix: scrollbar color

--- a/src/asset/theme/theme-dark.scss
+++ b/src/asset/theme/theme-dark.scss
@@ -9,6 +9,8 @@
     --c-gray-700:#303030;
     --c-gray-800:#1F1F33;
     --c-gray-900:#11112A;
+
+    --c-scrollbar: rgba(255, 255, 255, 0.1);
 }
 
 // 主题色
