--- a/src/asset/theme/theme-light.scss
+++ b/src/asset/theme/theme-light.scss
@@ -9,6 +9,8 @@
     --c-gray-700:#303030;
     --c-gray-800:#1F1F33;
     --c-gray-900:#11112A;
+
+    --c-scrollbar: rgba(0, 0, 0, 0.2);
 }
 
 // 主题色
